src/test/ui/unboxed-closures/unboxed-closure-sugar-wrong-number-number-type-parameters-1.stderr
error[E0220]: associated type `Output` not found for `One<()>`
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
  --> $DIR/unboxed-closure-sugar-wrong-number-number-type-parameters-1.rs:5:19
=======
  --> $DIR/unboxed-closure-sugar-wrong-number-number-type-parameters-1.rs:5:16
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
LL | fn foo(_: &dyn One())
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
   |                   ^^ associated type `Output` not found
=======
   |                ^^^^^ associated type `Output` not found
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0220`.
